--- a/src/blocks/b-offers/b-offers.less
+++ b/src/blocks/b-offers/b-offers.less
@@ -65,3 +65,28 @@
 		margin-bottom: 0;
 	}
 }
+
+.b-offers__loader {
+	background: #fff;
+	padding: 59px 0 38px;
+	text-align: center;
+
+	position: relative;
+
+	&:before {
+		position: absolute;
+		top: -182px;
+		left: 0;
+		width: 100%;
+		height: 182px;
+		background: linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
+
+		content: '';
+	}
+}
+
+.b-offers__button {
+	font-weight: bold;
+	padding-left: 24px;
+	padding-right: 24px;
+}
