--- a/src/less/mymixins.less
+++ b/src/less/mymixins.less
@@ -1,7 +1,22 @@
+@import "variables";
+@import "mixins";
+
 .mylink(@color, @border-color, @hover-color) {
 	display: inline-block;
 	color: @color;
 	border-bottom: 2px solid @border-color;
+
+	&:hover, &:active, &:focus {
+		text-decoration: none;
+		color: @hover-color;
+		border-bottom-color: @hover-color;
+	}
+}
+
+.mylink-extended(@color: @text-color, @border: 2px solid rgba(37,37,37,.05), @hover-color: @link-hover-color) {
+	display: inline-block;
+	color: @color;
+	border-bottom: @border;
 
 	&:hover, &:active, &:focus {
 		text-decoration: none;
