--- a/src/blocks/b-blog-menu/b-blog-menu.less
+++ b/src/blocks/b-blog-menu/b-blog-menu.less
@@ -2,16 +2,145 @@
 @import "mixins";
 
 .b-blog-menu {
-	border: 1px solid #000000;
-	display: flex;
-	//flex-direction: row;
-	//flex-wrap: nowrap;
-	//align-content: stretch;
-	//justify-content: stretch;
-	//justify-content: space-between;
-	align-items: stretch;
+	display: table;
+	width: 1000px - (66px*2);
+	margin: 32px 66px;
+	position: relative;
+	z-index: 100;
+
+	> .b-blog-menu__list {
+		display: table-row;
+
+		> .b-blog-menu__item {
+			display: table-cell;
+
+			position: relative;
+
+			&:hover > .b-blog-menu__list {
+				display: block;
+			}
+
+			> .b-blog-menu__list {
+				display: none;
+
+				position: absolute;
+				top: 100%;
+				left: 50%;
+				transform: translateX(-50%);
+				background: #34495e;
+				width: 192px;
+				padding: 3px 0 6px;
+				margin-top: 14px;
+
+				/* White (invisible) line before sub menu */
+				&:before {
+					position: absolute;
+					top: -14px;
+					left: 0;
+					width: 100%;
+					height: 14px;
+					background: #fff;
+
+					content: '';
+				}
+
+				/* Arrow for sub menu */
+				&:after {
+					content: '';
+
+					position: absolute;
+					top: -9px;
+					left: 50%;
+					transform: translateX(-50%);
+
+					width: 0;
+					height: 0;
+					border-left: 9px solid transparent;
+					border-right: 9px solid transparent;
+
+					border-bottom: 9px solid #34495e;
+				}
+
+				.b-blog-menu__link {
+					display: block;
+					text-align: center;
+
+					background: #34495e;
+					color: #fff;
+					padding: 14px 0;
+
+					&:hover, &:active, &:focus {
+						background: #2c3e50;
+						color: #fff;
+						text-decoration: none;
+					}
+				}
+			}
+
+			> .b-blog-menu__link {
+				display: block;
+				text-align: center;
+
+				font-size: 24px;
+				padding: 14px 0;
+
+				background: #008fcb;
+				color: #fff;
+
+				&:hover, &:active, &:focus {
+					background: #007cb5;
+					color: #fff;
+					text-decoration: none;
+				}
+			}
+
+			&.b-blog-menu__item_active {
+				> .b-blog-menu__link {
+					background: #acc000;
+				}
+			}
+		}
+	}
 }
 
-.b-blog-menu__item {
-	border: 1px solid red;
+.b-blog-menu__item_home {
+	width: 63px;
+}
+
+.b-blog-menu__icon {
+}
+
+.b-blog-menu__icon_home {
+	display: inline-block;
+	width: 23px;
+	height: 20px;
+	background: left top no-repeat url("../../assets/img/menu-icon-home.svg");
+	background-size: 23px 20px;
+
+	position: relative;
+	top: 2px;
+}
+
+.b-blog-menu__icon_search {
+	display: inline-block;
+	width: 20px;
+	height: 19px;
+	background: left top no-repeat url("../../assets/img/menu-icon-search.svg");
+	background-size: 20px 19px;
+
+	position: relative;
+	top: 2px;
+}
+
+.b-blog-menu__item_search {
+	width: 60px;
+	position: relative;
+
+	> .b-blog-menu__link {
+		background: #34495e !important;
+
+		&:hover, &:active, &:focus {
+			background: darken(#34495e, 5%) !important;
+		}
+	}
 }
