--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -11,7 +11,7 @@ p.browserupgrade.
             .b-header__menu.b-header-menu
                 .b-header-menu__item: a.b-header-menu__link(href='portfolio_type_1.html') Портфолио
                 .b-header-menu__item: a.b-header-menu__link(href='reviews.html') Отзывы
-                .b-header-menu__item: a.b-header-menu__link(href='#') Стоимость
-                .b-header-menu__item: a.b-header-menu__link(href='#') Справочник клиента
+                .b-header-menu__item: a.b-header-menu__link(href='prices.html') Стоимость
+                .b-header-menu__item: a.b-header-menu__link(href='blog.html') Справочник клиента
                 .b-header-menu__item: a.b-header-menu__link(href='#') Контакты
             a.btn.btn-success.btn-lg.b-header__button(href='#') Заказать баннер
