done vacancies page

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -105,6 +105,11 @@ body {
 	border-color: #841893;
 }
 
+.btn-info.active, .btn-info:active, .btn-info:hover, .open > .dropdown-toggle.btn-info {
+	background-color: #007cb5;
+	border-color: #007cb5;
+}
+
 .fancybox-close {
 	top: -53px;
 	right: 0;
