--- a/src/templates/includes/footer.jade
+++ b/src/templates/includes/footer.jade
@@ -24,13 +24,13 @@
                     p.b-footer-menu__header Студия
 
                     .row
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Портфолио
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Вакансии
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Стоимость
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='portfolio_type_1.html') Портфолио
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='vacancies.html') Вакансии
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='prices.html') Стоимость
                         .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Партнерка
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Отзывы
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='reviews.html') Отзывы
                         .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Сервисы
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Клиенты
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='clients.html') Клиенты
                         .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') События
                         .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Контакты
             .col-xs-4
@@ -38,11 +38,11 @@
                     p.b-footer-menu__header Справочник клиента
 
                     .row
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
