--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -55,7 +55,7 @@
 
 @font-size-h1:            floor((@font-size-base * 2.25)); // ~36px
 @font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
-@font-size-h3:            ceil((@font-size-base * 1.7)); // ~24px
+@font-size-h3:            ceil((@font-size-base * 1.6666)); // ~24px
 @font-size-h4:            ceil((@font-size-base * 1.33)); // ~18px
 @font-size-h5:            @font-size-base;
 @font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
@@ -159,8 +159,8 @@
 @btn-success-border:             darken(@btn-success-bg, 0%);
 
 @btn-info-color:                 #fff;
-@btn-info-bg:                    @brand-info;
-@btn-info-border:                darken(@btn-info-bg, 5%);
+@btn-info-bg:                    #008fcb;
+@btn-info-border:                darken(@btn-info-bg, 0%);
 
 @btn-warning-color:              #fff;
 @btn-warning-bg:                 @brand-warning;
