--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -10,8 +10,8 @@ head
         //link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i', type='text/css')
         link(rel='stylesheet', href='assets/fonts/stylesheet.css')
         link(rel='stylesheet', href='assets/css/bootstrap.min.css')
-        //link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick.css')
-        //link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick-theme.css')
+        link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick.css')
+        link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick-theme.css')
         link(rel='stylesheet', href='assets/vendor/fancybox/source/jquery.fancybox.css?v=2.1.5', media='screen')
         link(rel='stylesheet', href='assets/css/common.min.css')
 
@@ -19,7 +19,7 @@ head
         script(src='assets/vendor/jquery/dist/jquery.min.js')
         script(src='assets/vendor/bootstrap/dist/js/bootstrap.min.js')
         script(src='assets/vendor/masonry/dist/masonry.pkgd.min.js')
-        //script(src='assets/vendor/slick-carousel/slick/slick.min.js')
+        script(src='assets/vendor/slick-carousel/slick/slick.min.js')
         script(src='assets/vendor/fancybox/source/jquery.fancybox.pack.js?v=2.1.5')
         script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-media.js')
         script(src='assets/js/script.js')
