done portfolio modal view

--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -13,6 +13,10 @@
 	text-align: center;
 }
 
+.fancybox-skin .b-portfolio-item__view {
+	border-radius: 0;
+}
+
 .b-portfolio-item__image {
 	display: inline-block;
 }
