--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -3,7 +3,7 @@ extends ./layouts/layout.jade
 block content
     .b-page
         .container
-            h1.b-page__title #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="#") Exante] “Лучший брокер”
+            h1.b-page__title #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante] “Лучший брокер”
 
             .b-language-tabs
                 ul.b-language-tabs__list(role="tablist")
