--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -14,4 +14,4 @@ p.browserupgrade.
                 .b-header-menu__item: a.b-header-menu__link(href='prices.html') Стоимость
                 .b-header-menu__item: a.b-header-menu__link(href='blog.html') Справочник клиента
                 .b-header-menu__item: a.b-header-menu__link(href='#') Контакты
-            a.btn.btn-success.btn-lg.b-header__button(href='#') Заказать баннер
+            a.btn.btn-success.btn-lg.b-header__button(href='order_1.html') Заказать баннер
