done blog item page

--- a/src/templates/blog.jade
+++ b/src/templates/blog.jade
@@ -31,7 +31,7 @@ block content
             .b-blog
                 .b-blog__list
                     - for (var i=0; i<4;++i)
-                        a.b-blog__item(href='#')
+                        a.b-blog__item(href='blog_item.html')
                             p.b-blog__title Яндекс.Баян: пошаговое руководство по настройке рекламной кампании
 
                             .b-blog__content
@@ -43,7 +43,7 @@ block content
                                     span 16 марта 2015
                                 .col-xs-6.text-right
                                     span 4 комментария
-                        a.b-blog__item(href='#')
+                        a.b-blog__item(href='blog_item.html')
                             p.b-blog__title Почему 9 из 10 слайдеров не работают и как это исправить?
 
                             .b-blog__content
@@ -55,7 +55,7 @@ block content
                                     span 15 августа 2013
                                 .col-xs-6.text-right
                                     span 1 комментарий
-                        a.b-blog__item(href='#')
+                        a.b-blog__item(href='blog_item.html')
                             p.b-blog__title Flash или HTML5: сравнение по 10 критериям
 
                             .b-blog__content
