--- a/src/blocks/b-text/b-text.less
+++ b/src/blocks/b-text/b-text.less
@@ -1,5 +1,6 @@
 @import "variables";
 @import "mixins";
+@import "mymixins";
 
 .b-text {
 
@@ -19,5 +20,53 @@
 
 	img {
 		margin: 38px 0;
+	}
+
+	a {
+		color: #008fcb;
+		text-decoration: underline;
+
+		&:hover, &:active, &:focus {
+			color: #007cb5;
+		}
+	}
+
+	blockquote {
+		font-size: 18px;
+		line-height: 20px;
+		color: @text-color;
+		border: none;
+		background: #f5f9fc;
+		padding: 25px 86px;
+		margin: 27px 0 20px;
+
+		position: relative;
+
+		&:before {
+			position: absolute;
+			left: 29px;
+			top: 50%;
+			transform: translateY(-50%);
+
+			width: 26px;
+			height: 29px;
+			background: left top no-repeat url("../../assets/img/blockquote.png");
+
+			content: '';
+			opacity: .1;
+		}
+		&:after {
+			position: absolute;
+			right: 29px;
+			top: 50%;
+			transform: translateY(-50%) rotate(180deg);
+
+			width: 26px;
+			height: 29px;
+			background: left top no-repeat url("../../assets/img/blockquote.png");
+
+			content: '';
+			opacity: .1;
+		}
 	}
 }
