done contacts page

--- a/src/blocks/b-form/b-form.less
+++ b/src/blocks/b-form/b-form.less
@@ -75,3 +75,15 @@
 		border-bottom-color: #008fcb;
 	}
 }
+
+.b-form__header {
+	font-size: 40px;
+	font-weight: bold;
+	margin-top: 30px;
+	margin-bottom: 10px;
+}
+
+.b-form__lead {
+	font-size: 30px;
+	margin-bottom: 35px;
+}
