--- a/src/templates/includes/footer.jade
+++ b/src/templates/includes/footer.jade
@@ -32,7 +32,7 @@
                         .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Сервисы
                         .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='clients.html') Клиенты
                         .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') События
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Контакты
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='contacts.html') Контакты
             .col-xs-4
                 .b-footer-menu
                     p.b-footer-menu__header Справочник клиента
