done contacts_done page

--- a/src/templates/contacts_done.jade
+++ b/src/templates/contacts_done.jade
@@ -50,14 +50,7 @@ block content
                     a.b-contact-links__item.b-contact-links__item_spark(href='#')
         .b-form
             .container
-                form.b-form__form(action="contacts_done.html")
-                    h2.b-form__header Напишите нам
-
-                    p.b-form__lead Чтобы получить ответ, напишите как вас зовут и как с вами связаться
-
-                    .form-group
-                        textarea.form-control(rows="10")
-
-                    input.btn.btn-primary.btn-lg.b-form__button(type="submit", value="Отправить")
-                    br
-                    a.b-form__link(href='#') Соглашение о конфиденциальности
+                form.b-form__form(action="")
+                    .b-order-done
+                        p.b-order-done__title Готово, ваша заявка отправлена!
+                        p.b-order-done__text Мы внимательно изучим её, а затем свяжемся с вами.
