--- a/src/blocks/b-prices/b-prices.less
+++ b/src/blocks/b-prices/b-prices.less
@@ -106,6 +106,10 @@
 	margin: 0 auto 35px;
 }
 
+.b-prices__rub {
+	font-size: .6em;
+}
+
 .b-prices__link {
 	.mylink-extended(@text-color, 2px dotted rgba(37, 37, 37, .05), @link-hover-color);
 	margin-bottom: 13px;
