--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -18,7 +18,8 @@
 }
 
 .b-portfolio-item__image {
-	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .b-portfolio-item__lead {
