--- a/src/templates/prices.jade
+++ b/src/templates/prices.jade
@@ -158,6 +158,7 @@ block content
                         p.b-discounts__title 5% за объём прошлого месяца
                         .b-discounts__text
                             p Если сумма заказов за прошлый месяц более 100 000 рублей, то весь текущий месяц на все заказы действует скидка 5%, независимо от суммы единовременного заказа.
+                .b-discounts__list
                     .b-discounts__item
                         p.b-discounts__title До 100% за бартер
                         .b-discounts__text
