add plus icon to loader buttons

--- a/src/templates/clients.jade
+++ b/src/templates/clients.jade
@@ -29,5 +29,7 @@ block content
                             .b-clients__content
                                 img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
                                 img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
-                a.b-clients__button(href='#'): span.b-clients__button-text Загрузить ещё
+                a.b-clients__button(href='#')
+                    i.b-clients__button-icon
+                    span.b-clients__button-text Загрузить ещё
 
