--- a/src/templates/portfolio_type_5.jade
+++ b/src/templates/portfolio_type_5.jade
@@ -71,5 +71,7 @@ block content
                                 p.b-portfolio__category Строительство
                                 p.b-portfolio__date 20 апреля 2016
 
-                a.b-portfolio__button(href='#'): span.b-portfolio__button-text Загрузить ещё
+                a.b-portfolio__button(href='#')
+                    i.b-portfolio__button-icon
+                    span.b-portfolio__button-text Загрузить ещё
 
