--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -129,7 +129,9 @@ block content
                             span.b-reviews__date 11 января 2015
                             a.b-reviews__link(href='#') Оригинал отзыва
             .b-reviews__loader
-                a.b-reviews__button(href='#'): span.b-reviews__button-text Загрузить ещё
+                a.b-reviews__button(href='#')
+                    i.b-reviews__button-icon
+                    span.b-reviews__button-text Загрузить ещё
                         
 
         .hidden
