--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -267,6 +267,41 @@
 	}
 }
 
+.b-reviews__button-icon {
+	display: inline-block;
+	position: relative;
+	top: 5px;
+	width: 28px;
+	height: 28px;
+	border: 2px solid currentColor;
+	border-radius: 50%;
+
+	margin-right: 10px;
+
+	&:before {
+		content: '';
+		position: absolute;
+		width: 16px;
+		height: 2px;
+		background-color: currentColor;
+
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+	&:after {
+		content: '';
+		position: absolute;
+		width: 16px;
+		height: 2px;
+		background-color: currentColor;
+
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%) rotate(90deg);
+	}
+}
+
 .b-reviews__button-text {
 	border-bottom: 2px dotted rgba(37, 37, 37, .15);
 }
