--- a/src/templates/portfolio_type_1.jade
+++ b/src/templates/portfolio_type_1.jade
@@ -66,7 +66,9 @@ block content
                                 p.b-portfolio__category Строительство
                                 p.b-portfolio__date 20 апреля 2016
 
-                a.b-portfolio__button(href='#'): span.b-portfolio__button-text Загрузить ещё
+                a.b-portfolio__button(href='#')
+                    i.b-portfolio__button-icon
+                    span.b-portfolio__button-text Загрузить ещё
 
             .hidden
                 #portfolio_1(style='width:1080px;padding:0 40px')
