fix rub font size

--- a/src/blocks/b-offer-variants/b-offer-variants.less
+++ b/src/blocks/b-offer-variants/b-offer-variants.less
@@ -42,6 +42,10 @@
 	font-size: 30px;
 }
 
+.b-offer-variants__rub {
+	font-size: 75%;
+}
+
 .b-offer-variants__item_1 {
 	.b-offer-variants__title {
 		color: #e74c3c;
