--- a/src/templates/offer.jade
+++ b/src/templates/offer.jade
@@ -9,7 +9,7 @@ block content
                 img.img-responsive.b-offer__image(src='http://placehold.it/1000x300')
 
                 .b-offer__properties
-                    .b-offer__property #[span.text-muted Выгода до] 3200 #[small ₽]
+                    .b-offer__property #[span.text-muted Выгода до] 3200#[span.b-offer__rub ₽]
                     .b-offer__property #[span.text-muted Действует до] 10.06.2016
                 .b-offer__text.b-text
                     p JivoSite — чат для сайта в разы увеличит количество обращений клиентов. Благодаря гибким настройкам дизайна, JivoSite аккуратно впишется в Ваш сайт и повысит его эффективность.
@@ -30,19 +30,19 @@ block content
 
                             p.b-offer-variants__text 1 месяц бесплатного использования чата без ограничений
 
-                            p.b-offer-variants__price 800 #[small ₽]
+                            p.b-offer-variants__price 800#[small.b-offer-variants__rub ₽]
                         .b-offer-variants__item.b-offer-variants__item_2
                             p.b-offer-variants__title Премиум
 
                             p.b-offer-variants__text 2 месяца использования чата без ограничений
 
-                            p.b-offer-variants__price 1600 #[small ₽]
+                            p.b-offer-variants__price 1600#[small.b-offer-variants__rub ₽]
                         .b-offer-variants__item.b-offer-variants__item_3
                             p.b-offer-variants__title Вип
 
                             p.b-offer-variants__text 4 месяца бесплатного использования чата без ограничений
 
-                            p.b-offer-variants__price 3200 #[small ₽]
+                            p.b-offer-variants__price 3200#[small.b-offer-variants__rub ₽]
                 .b-offer__bottom
                     | #[a.btn.btn-success.btn-lg(href='order_1.html') Заказать баннер] и получить бонус или #[a.btn.btn-primary.btn-lg(href='offers.html') Посмотреть все 24 акции]
 
