fix gulpfile (class names with numbers was missing)
add index (finally) page

--- a/src/blocks/b-blog/b-blog.less
+++ b/src/blocks/b-blog/b-blog.less
@@ -2,7 +2,23 @@
 @import "mixins";
 
 .b-blog {
+	.g-loader__button {
+		background-color: #2ecc71;
+		border-color: #2ecc71;
 
+		&:hover, &:active, &:focus {
+			background-color: #29b866;
+			border-color: #29b866;
+		}
+	}
+}
+
+.b-blog__header {
+	margin-top: 62px;
+	margin-bottom: 22px;
+	text-align: center;
+	font-weight: bold;
+	font-size: 40px;
 }
 
 .b-blog__list {
