--- a/src/blocks/b-review/b-review.less
+++ b/src/blocks/b-review/b-review.less
@@ -81,3 +81,17 @@
 		}
 	}
 }
+
+.b-reviews__head {
+	font-size: 40px;
+	font-weight: bold;
+	margin-top: -30px;
+	margin-bottom: 10px;
+	text-align: center;
+}
+
+.b-reviews__lead {
+	font-size: 30px;
+	margin-bottom: 58px;
+	text-align: center;
+}
