--- a/src/templates/includes/footer.jade
+++ b/src/templates/includes/footer.jade
@@ -2,7 +2,7 @@
     .container
         .row
             .col-xs-3.text-center
-                a.b-footer__logo(href='#')
+                a.b-footer__logo(href='index.html')
 
                 .b-social-links
                     .b-social-links__item
