--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -7,7 +7,7 @@ p.browserupgrade.
 .b-header
     .container
         .clearfix
-            a.b-header__logo(href='#')
+            a.b-header__logo(href='index.html')
             .b-header__menu.b-header-menu
                 .b-header-menu__item: a.b-header-menu__link(href='portfolio_type_1.html') Портфолио
                 .b-header-menu__item: a.b-header-menu__link(href='reviews.html') Отзывы
