--- a/src/blocks/b-page/b-page.less
+++ b/src/blocks/b-page/b-page.less
@@ -33,3 +33,9 @@
 		border-bottom-color: @link-hover-color;
 	}
 }
+
+.b-page__sub-title {
+	font-size: 40px;
+	text-align: center;
+	margin-top: -7px - 22px + 10px;
+}
