--- a/src/templates/blog_done.jade
+++ b/src/templates/blog_done.jade
@@ -67,11 +67,6 @@ block content
                                     span 16 марта 2015
                                 .col-xs-6.text-right
                                     span 16 марта 2015
-            .b-subscribe.b-subscribe_theme_alt
-                p.b-subscribe__title Получайте новые статьи прямо на почту
-                p.b-subscribe__lead Никакого спама или рекламы. Только статьи.
-
-                form.form-inline.b-subscribe__form(action='blog_done.html')
-                    .form-group
-                        input.form-control.b-subscribe__input(name='email', type='email', placeholder='Введите свой email')
-                    button.btn.b-subscribe__button(type="submit") Подписаться
+            .b-subscribe-done
+                p.b-subscribe-done__title Почти готово!
+                .b-subscribe-done__text Чтобы письма не пападали в спам - подтвердите подписку.#[br]Для этого перейдите по ссылке в письме, которое мы отправили на ваш email.
